k8s/07-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: connectcamp
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8089"
    spec:
      containers:
        - name: backend
          # Remplacer <DOCKERHUB_USERNAME> par ton username Docker Hub
          image: farah/connectcamp-backend:latest
          ports:
            - containerPort: 8089
          volumeMounts:
            - name: uploads-storage
              mountPath: /app/uploads
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8089
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8089
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
      volumes:
        - name: uploads-storage
          persistentVolumeClaim:
            claimName: backend-uploads-pvc
