k8s/08-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: connectcamp
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 8089
      targetPort: 8089
  type: ClusterIP
